--- a/src/app/components/new-todo/new-todo.component.html
+++ b/src/app/components/new-todo/new-todo.component.html
@@ -1,1 +1,26 @@
-<p>new-todo works!</p>
+<form #f="ngForm" (ngSubmit)="onNewTodoSubmit()">
+  <mat-form-field appearance="outline">
+    <mat-label>todo name</mat-label>
+    <input ngModel name="title" matInput placeholder="what is your task?" />
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>todo description</mat-label>
+    <input
+      ngModel
+      name="description"
+      matInput
+      placeholder="what is your task?"
+    />
+  </mat-form-field>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Choose a date</mat-label>
+    <input ngModel name="date" matInput [matDatepicker]="picker" />
+    <mat-hint>MM/DD/YYYY</mat-hint>
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
+
+  <button mat-button color="primary" type="submit">submit</button>
+</form>
