--- a/src/app/components/new-todo/new-todo.component.html
+++ b/src/app/components/new-todo/new-todo.component.html
@@ -1,26 +1,50 @@
 <form #f="ngForm" (ngSubmit)="onNewTodoSubmit()">
+  <h2>add new todo</h2>
   <mat-form-field appearance="outline">
     <mat-label>todo name</mat-label>
-    <input ngModel name="title" matInput placeholder="what is your task?" />
-  </mat-form-field>
+    <input
+      required="true"
+      ngModel
+      name="title"
+      matInput
+      placeholder="what is your task?"
+    />
+    <mat-error *ngIf="f.submitted && 'f.controls.title?.invalid'"
+      >title is required</mat-error
+    >
+    </mat-form-field>
 
-  <mat-form-field appearance="outline">
+    <mat-form-field appearance="outline">
     <mat-label>todo description</mat-label>
     <input
+      required="true"
       ngModel
       name="description"
       matInput
       placeholder="what is your task?"
     />
-  </mat-form-field>
 
-  <mat-form-field appearance="fill">
+    <mat-error *ngIf="f.submitted && 'f.controls.description?.invalid'"
+      >description is required</mat-error
+    >
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
     <mat-label>Choose a date</mat-label>
-    <input ngModel name="date" matInput [matDatepicker]="picker" />
+    <input
+      required="true"
+      ngModel
+      name="date"
+      matInput
+      [matDatepicker]="picker"
+    />
     <mat-hint>MM/DD/YYYY</mat-hint>
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
+
+      <mat-error *ngIf="f.submitted && 'f.controls.date?.invalid'"
+    >date is required</mat-error>
   </mat-form-field>
 
-  <button mat-button color="primary" type="submit">submit</button>
+  <button mat-raised-button color="primary" type="submit">submit</button>
 </form>
