--- a/src/app/components/new-todo/new-todo.component.html
+++ b/src/app/components/new-todo/new-todo.component.html
@@ -37,6 +37,7 @@
       name="date"
       matInput
       [matDatepicker]="picker"
+      [min] = "minDate"
     />
     <mat-hint>MM/DD/YYYY</mat-hint>
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
